Fixed Json parse error on safari + default diploma sample working + display improvements + display credential type url + copy to url to clipboard

--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -199,15 +199,46 @@ footer a {
 .credential-type {
   display: block;
   width: 100%;
-  background: #f5f5f5;
+  background: rgba(24, 117, 209, 0.1);
   border-radius: 10px;
   margin: 10px;
   padding: 10px;
 
   .heading {
-    text-transform: uppercase;
-    font-size: 11px;
+    display: flex;
     color: #888;
+    font-size: 11px;
+
+    .title {
+      text-transform: uppercase;
+      font-size: 11px;
+
+      flex-grow: 3;
+    }
+
+    .type {
+      background: rgba(24, 117, 209, 0.5);
+      color: white;
+      padding: 5px;
+      border-radius: 5px;
+      text-transform: uppercase;
+      flex-grow: 3;
+      font-weight: bold;
+    }
+
+    .publish-date {
+      flex-grow: 1;
+      align-self: center;
+      text-align: right;
+      display: flex;
+      justify-content: flex-end;
+
+      .date {
+        font-weight: bold;
+        margin-right: 5px;
+        font-size: 13px;
+      }
+    }
   }
 
   .properties {
@@ -219,9 +250,20 @@ footer a {
         align-items: flex-start;
         padding: 10px;
         font-weight: bold;
+        align-items: center;
       }
       .right {
         padding: 10px;
+      }
+      .fields {
+        display: flex;
+        .field {
+          background: #1875d1;
+          color: white;
+          padding: 5px;
+          border-radius: 10px;
+          margin-right: 5px;
+        }
       }
     }
   }
